# imbalanced-learn

./: .buildinfo  .coveragerc  .flake8  .gitignore  .landscape  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Notebook_UnbalancedDataset.ipynb  PCA.py  README.md  README.rst  SPIDER Benchmarks.ipynb  SPIDER Unit Test & Diagrams.ipynb  SPIDER Unit Test (Ver 1).ipynb  SPIDER Unit Test (Ver 2).ipynb  UnbalancedDataset.py  Visualization.py  __init__.py  about.html  api.html  appveyor.yml  azure-pipelines.yml  circle.yml  conftest.py  developers_utils.html  ensemble.html  genindex.html  index.html  install.html  objects.inv  (+15 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  check-changelog.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other--blank-template-.md  question.md  usage-question.md
.github/workflows/: circleci-artifacts-redirector.yml  codeql.yml  linters.yml  tests.yml
_downloads/: plot_adasyn.ipynb  plot_balance_cascade.ipynb  plot_balance_cascade.py  plot_cluster_centroids.ipynb  plot_cluster_centroids.py  plot_condensed_nearest_neighbour.ipynb  plot_condensed_nearest_neighbour.py  plot_easy_ensemble.ipynb  plot_easy_ensemble.py  plot_edited_nearest_neighbours.ipynb  plot_edited_nearest_neighbours.py  plot_instance_hardness_threshold.ipynb  plot_instance_hardness_threshold.py  plot_nearmiss_1.ipynb  plot_nearmiss_1.py  plot_nearmiss_2.ipynb  plot_nearmiss_3.ipynb  plot_neighbourhood_cleaning_rule.ipynb  plot_neighbourhood_cleaning_rule.py  plot_one_sided_selection.ipynb  plot_one_sided_selection.py  plot_pipeline_classification.ipynb  plot_random_over_sampling.ipynb  plot_random_over_sampling.py  plot_random_under_sampler.ipynb  plot_random_under_sampler.py  plot_repeated_edited_nearest_neighbours.ipynb  plot_repeated_edited_nearest_neighbours.py  plot_smote.ipynb  plot_smote.py  plot_smote_bordeline_1.ipynb  plot_smote_bordeline_1.py  plot_smote_bordeline_2.ipynb  plot_smote_bordeline_2.py  plot_smote_enn.ipynb  plot_smote_enn.py  plot_smote_svm.ipynb  plot_smote_tomek.ipynb  plot_tomek_links.ipynb  plot_tomek_links.py
_modules/: index.html
_modules/imblearn/: base.html  pipeline.html
_modules/sklearn/: base.html
_modules/unbalanced_dataset/: base.html  base_sampler.html  pipeline.html  setup.html
_sources/: api.txt  index.txt  install.txt  support.txt  todo.txt
_sources/auto_examples/: index.txt
_sources/modules/: modules.txt  unbalanced_dataset.ensemble.txt  unbalanced_dataset.txt
auto_examples/: index.html
auto_examples/applications/: plot_multi_class_under_sampling.html  plot_over_sampling_benchmark_lfw.html  plot_topic_classication.html  porto_seguro_keras_under_sampling.html
auto_examples/combine/: plot_smote_enn.html  plot_smote_tomek.html
auto_examples/ensemble/: plot_balance_cascade.html  plot_comparison_ensemble_classifier.html  plot_easy_ensemble.html
auto_examples/evaluation/: plot_metrics.html
auto_examples/model_selection/: plot_validation_curve.html
auto_examples/over-sampling/: plot_adasyn.html  plot_illustration_generation_sample.html  plot_random_over_sampling.html  plot_smote.html  plot_smote_bordeline_1.html  plot_smote_bordeline_2.html  plot_smote_svm.html
auto_examples/pipeline/: plot_pipeline_classification.html
auto_examples/under-sampling/: plot_cluster_centroids.html  plot_condensed_nearest_neighbour.html  plot_edited_nearest_neighbours.html  plot_instance_hardness_threshold.html  plot_nearmiss_1.html  plot_nearmiss_2.html  plot_nearmiss_3.html  plot_neighbourhood_cleaning_rule.html  plot_one_sided_selection.html  plot_random_under_sampler.html  plot_repeated_edited_nearest_neighbours.html  plot_tomek_links.html
benchmarks/: README.md  bench_plot_combine.py  bench_plot_over_sampling.py  bench_plot_under_sampling.py
build_tools/: shared.sh
build_tools/appveyor/: test.ps1
build_tools/azure/: install.cmd  install.sh  install_win.sh  linting.sh  posix-docker.yml  posix.yml  test_docs.sh  test_docstring.sh  test_script.cmd  test_script.sh  upload_codecov.cmd  upload_codecov.sh  windows.yml
build_tools/circle/: build_doc.sh  build_test_cuml.sh  checkout_merge_commit.sh  linting.sh  push_doc.sh
build_tools/travis/: after_success.sh  install.sh  (+2 more)
conda-recipe/: README.md  conda_deployement.sh  meta.yaml
datasets/: index.html
doc/: Makefile  about.rst  api.rst  combine.rst  common_pitfalls.rst  conf.py  cross_validation.rst  developers_utils.rst  ensemble.rst  index.rst  install.rst  introduction.rst  make.bat  metrics.rst  miscellaneous.rst  model_selection.rst  over_sampling.rst  problem_statement.rst  references.rst  support.rst  todo.rst  tree.rst  tree_split.rst  under_sampling.rst  user_guide.rst  whats_new.rst  zzz_references.rst
examples/: README.MD  README.txt  plot_outlier_rejections.py  plot_ratio_usage.py  plot_sampling_strategy_usage.py  plot_sampling_target_usage.py  plot_unbalanced_dataset.ipynb  text_sentiment_svm_with_resampling.py
imblearn/: VERSION.txt  __init__.py  _config.py  _min_dependencies.py  _version.py  base.py  exceptions.py  licic.py  misc.py  pipeline.py  setup.py  version.py
maint_tools/: test_docstring.py
modules/: modules.html  unbalanced_dataset.combine.html  unbalanced_dataset.ensemble.html  unbalanced_dataset.html  unbalanced_dataset.over_sampling.html  unbalanced_dataset.under_sampling.html  unbalanced_dataset.utils.html
notebook/: Notebook_UnbalancedDataset.ipynb
stable/: about.html  combine.html  genindex.html  install.html  introduction.html  metrics.html  miscellaneous.html  over_sampling.html  py-modindex.html  under_sampling.html  user_guide.html  whats_new.html
test/: Notebook_UnbalancedDataset.ipynb  Visualization.py  test.py  test_nearmiss.py
tools/: cythonize.py
unbalanced_dataset/: __init__.py  base.py  base_sampler.py  ensemble_sampling.py  over_sampling.py  pipeline.py  setup.py  unbalanced_dataset.py  under_sampling.py  utils.py  version.py
(+652 files in other folders)
